@@ -1,3 +1,7 @@
+2017-02-02  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/pushes.R (pbPost): Use 'target_device_ind', not 'device_ind'
+
 2017-01-31  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Minor edits, more canonical URLs
